syntax = "proto3";

package ssor.boss;
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message book {
	string name = 1;
	string author = 2;
}

service book_service {
	rpc get_book(google.protobuf.UInt32Value) returns (book) {}
	rpc list_books(google.protobuf.Empty) returns (stream book) {}
}
